<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version><!-- have to downgrade for Java 11 support as the demo uses flink 1.15 image Java 11 ; upgrading to a latest flink does not work -->
    </parent>

    <groupId>com.ververica.field.dynamicrules</groupId>
    <artifactId>dynamic-fraud-detection</artifactId>
    <version>1.2</version>
    <description>Dynamic Fraud Detection Demo</description>

    <properties>
        <java.version>8</java.version>
        
        <flink.version>1.15.4</flink.version>
        <google.cloud.pubsub.version>1.51.0</google.cloud.pubsub.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
        <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
        <copy.rename.maven.plugin.version>1.0.1</copy.rename.maven.plugin.version>
        <jib.maven.plugin.version>3.4.4</jib.maven.plugin.version>
        
        <jib.skip.docker.build>false</jib.skip.docker.build>
        <jib.dist.dir>${project.build.directory}/jib-dist</jib.dist.dir>
        <jib.dist.lib.dir>${jib.dist.dir}/lib</jib.dist.lib.dir>
        <jib.dist.root.dir>${jib.dist.dir}/root</jib.dist.root.dir>
        <jib.container.docker.approot.path>/opt/flink</jib.container.docker.approot.path>
    </properties>

    <dependencies>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        
        <!-- Flink Dependencies -->
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-java</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-streaming-java</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-runtime-web</artifactId>
            <version>${flink.version}</version>
        </dependency>
        
        <!-- Connector Dependencies -->
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-connector-kafka</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-connector-gcp-pubsub</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-pubsub</artifactId>
            <version>${google.cloud.pubsub.version}</version>
        </dependency>

        <!-- Log4j Dependencies -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        
        <!-- Spring Dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency> 
            <groupId>org.apache.flink</groupId> 
            <artifactId>flink-test-utils</artifactId> 
            <version>${flink.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-streaming-java</artifactId>
            <version>${flink.version}</version>
            <scope>provided</scope>
            <classifier>tests</classifier>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-runtime</artifactId>
            <version>${flink.version}</version>
            <scope>provided</scope>
            <classifier>tests</classifier>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- Shade Plugin for Fat JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven.shade.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>flink-${flink.version}</shadedClassifierName>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.apache.flink:force-shading</exclude>
                                    <exclude>com.google.code.findbugs:jsr305</exclude>
                                    <exclude>org.slf4j</exclude>
                                    <exclude>log4j</exclude>
                                    <exclude>org.apache.logging.log4j:log4j-to-slf4j</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/*IntegrationTest.java</exclude>
                    </excludes>
                    <argLine>
                        --add-opens=java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>run-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                <artifactId>copy-rename-maven-plugin</artifactId>
                <version>${copy.rename.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>dynamic-fraud-detection-assembly-jar</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <sourceFile>${project.build.directory}/${project.build.finalName}-flink-${flink.version}.jar</sourceFile>
                            <destinationFile>${jib.dist.lib.dir}/job.jar</destinationFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>dynamic-fraud-detection-assembly-sh</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <sourceFile>${basedir}/docker-entrypoint.sh</sourceFile>
                            <destinationFile>${jib.dist.root.dir}/docker-entrypoint.sh</destinationFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>
    
    <profiles>
        <profile>
            <id>local-deployment</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.cloud.tools</groupId>
                        <artifactId>jib-maven-plugin</artifactId>
                        <version>${jib.maven.plugin.version}</version>
                        <configuration>
                            <skip>${jib.skip.docker.build}</skip>
                            <from>
                                <image>flink:1.15.4-java11</image><!-- latest 1.15.x series "https://hub.docker.com/_/flink/tags?name=1.15" -->
                            </from>
                            <to>
                                <image>fraud-detection-job</image>
                                <tags>
                                    <tag>${project.version}</tag>
                                </tags>
                            </to>
                            <container>
                                <appRoot>${jib.container.docker.approot.path}</appRoot>
                                <user>flink</user>
                                <ports>
                                    <port>8081</port>
                                    <port>6123</port>
                                </ports>
                                <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                                <entrypoint>
                                    <item>/docker-entrypoint.sh</item>
                                </entrypoint>
                            </container>
                            <extraDirectories>
                                <permissions>
                                    <permission>
                                        <file>/docker-entrypoint.sh</file>
                                        <mode>755</mode>
                                    </permission>
                                </permissions>
                                <paths>
                                    <!-- copies from 'target/dynamic-fraud-detection-1.2-flink-1.15.1.jar' into '/opt/flink/' on the container -->
                                    <path>
                                        <from>${jib.dist.lib.dir}</from>
                                        <into>${jib.container.docker.approot.path}/lib</into>
                                    </path>
                                    <!-- copies from 'docker-entrypoint.sh' into '/' on the container -->
                                    <path>
                                        <from>${jib.dist.root.dir}</from>
                                        <into>/</into>
                                    </path>
                                </paths>
                            </extraDirectories>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>confluentcloud-deployment</id>
        </profile>
    </profiles>
</project>
